package jabberpoint.utility;

public class XMLAttributes {
    /**
     * Names of XML tags of attributes
     */

    public static final String SHOWTITLE = "showtitle";
    public static final String SLIDETITLE = "title";
    public static final String SLIDE = "slide";
    public static final String ITEM = "item";
    public static final String LEVEL = "level";
    public static final String KIND = "kind";
    public static final String TEXT = "text";
    public static final String IMAGE = "image";
}
